<resources>
   <string name="zero">0</string>
    <string name="O">o</string>
    <string name="closebracket">)</string>
    <string name="openbracket">(</string>
    <string name="divide">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="add">+</string>
    <string name="equals">=</string>
    <string name="minus">-</string>
    <string name="ac">C</string>
    <string name="dot">.</string>
    <string name="mod">%</string>
    <string name="negative">(-)</string>
    <string name="squareroot">√</string>
    <string name="powerofn">^</string>
    <string name="square">x²</string>
    <string name="logarithmic">log</string>
    <string name="exponents">e^x</string>
    <string name="reciprocal">1/x</string>
    <string name="rootfn">∛</string>
</resources>
