<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="10dp"
        android:text="@string/zero"
        android:textAlignment="viewEnd"
        android:textSize="60sp" />

    <LinearLayout
        android:id="@+id/buttons_firstrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:background="@color/gray"
        android:orientation="horizontal"
        tools:ignore="ObsoleteLayoutParam">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_O"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:backgroundTint="@color/yellow_green"
            android:text="@string/O"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_openbracket"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:text="("
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_closebracket"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:text="@string/closebracket"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_divide"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:backgroundTint="@color/orange_red"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_secondrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/gray"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_seven"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_eight"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_nine"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiply"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:backgroundTint="@color/orange_red"
            android:text="@string/multiply"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_thirdrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/gray"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_four"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_five"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_six"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_addition"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:backgroundTint="@color/orange_red"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_fourthrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/gray"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_one"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_two"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_three"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_minus"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:backgroundTint="@color/orange_red"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_fifthrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/gray"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_ac"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:backgroundTint="@color/coral"
            android:text="@string/ac"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_zero"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_dot"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equals"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:backgroundTint="@color/orange_red"
            android:text="@string/equals"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_sixthrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/gray"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_mod"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:backgroundTint="@color/coral"
            android:text="@string/mod"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_negative"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:backgroundTint="@color/orange_red"
            android:text="-"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_squareroot"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:text="@string/squareroot"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:backgroundTint="@color/orange_red"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_powerofn"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:backgroundTint="@color/orange_red"
            android:text="@string/powerofn"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_seventhrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/gray"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_square"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:backgroundTint="@color/coral"
            android:text="@string/square"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="@color/orange_red"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_logarithmic"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:text="@string/logarithmic"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@color/orange_red"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_exponents"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:backgroundTint="@color/orange_red"
            android:text="@string/exponents"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_reciprocal"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="13dp"
            android:backgroundTint="@color/orange_red"
            android:text="@string/reciprocal"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/buttons_eightrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/gray"
        android:gravity="center"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_rootsofn"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="13dp"
            android:backgroundTint="@color/orange_red"
            android:text="@string/rootfn"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:cornerRadius="35dp"
            android:onClick="onButtonClick"/>

    </RelativeLayout>


</LinearLayout>